# LazyVoiceAssistant

./: README.md  SaveToExcel.py  TaskDataExtractor.py  data.xlsx  main.py  microphone_recognition_gpu.py  pyproject.toml  test.xlsx
